--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,62 @@ h6 {
 /* ######################### NAVBAR ######################### */
 .navbar {
   position: sticky;
+  top: 0;
   width: 100%;
   height: 60px;
-  background: #000; }
+  background: #000;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); }
+
+.navbar-center {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 2em; }
+  .navbar-center .navbar-list {
+    display: flex;
+    justify-content: flex-end; }
+    .navbar-center .navbar-list__link {
+      color: #fff;
+      padding: 0 0 0 1em; }
+
+.hero {
+  min-height: calc(100vh - 60px);
+  background: url("https://images.pexels.com/photos/1201624/pexels-photo-1201624.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative; }
+
+.banner-overlay {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.92);
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff; }
+
+.banner-content {
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 0 2em; }
+  .banner-content__email {
+    color: #333; }
+  .banner-content .banner-content-list {
+    display: flex;
+    justify-content: flex-start;
+    padding: 30px 0; }
+    .banner-content .banner-content-list__link {
+      padding: 20px;
+      border-radius: 50%;
+      font-size: 24px;
+      color: #fff; }
 
 /* ######################### END NAVBAR ######################### */
