--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,6 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Charm:400,700");
 /* ######################### VARIABLES ######################### */
 /* ######################### END VARIABLES ######################### */
 /* ######################### BASE ######################### */
@@ -63,6 +65,8 @@ h6 {
       color: #fff;
       padding: 0 0 0 1em; }
 
+/* ######################### END NAVBAR ######################### */
+/* ######################### HERO ######################### */
 .hero {
   min-height: calc(100vh - 60px);
   background: url("https://images.pexels.com/photos/1201624/pexels-photo-1201624.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
@@ -76,7 +80,7 @@ h6 {
 
 .banner-overlay {
   position: absolute;
-  background: rgba(0, 0, 0, 0.92);
+  background: rgba(0, 0, 0, 0.85);
   height: 100%;
   width: 100%;
   display: flex;
@@ -89,15 +93,125 @@ h6 {
   background: rgba(0, 0, 0, 0.3);
   padding: 0 2em; }
   .banner-content__email {
-    color: #333; }
-  .banner-content .banner-content-list {
-    display: flex;
-    justify-content: flex-start;
-    padding: 30px 0; }
-    .banner-content .banner-content-list__link {
-      padding: 20px;
-      border-radius: 50%;
-      font-size: 24px;
-      color: #fff; }
+    color: #4d4d4d;
+    font-family: "Charm"; }
 
-/* ######################### END NAVBAR ######################### */
+.social-content {
+  width: auto;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.2);
+  position: relative;
+  animation-name: appear-relay;
+  animation-duration: 1s;
+  animation-delay: 2s;
+  animation-timing-function: linear;
+  overflow: hidden; }
+
+.banner-content-list {
+  list-style: none;
+  opacity: 0;
+  animation: appear-text 0.0001s linear forwards;
+  animation-delay: 2s;
+  display: flex; }
+  .banner-content-list li {
+    line-height: 3em;
+    width: 50px;
+    margin: 0 10px 0 0;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 10; }
+    .banner-content-list li a {
+      font-size: 1.4rem;
+      color: #cccccc;
+      width: 100%;
+      background: #1a1a1a;
+      text-align: center;
+      border-radius: 50%;
+      transition: .3s; }
+  .banner-content-list li:hover a {
+    transform: scale(0.95);
+    color: #fff;
+    background: black; }
+
+/* ######################### ACITVE LINK EFFECT ######################### */
+.banner-content-list__link:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #fff 9%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  transform: scale(8, 8);
+  opacity: 0;
+  transition: transform .3s, opacity 1s; }
+
+.banner-content-list__link:active:after {
+  transform: scale(0, 0);
+  opacity: .3;
+  transition: 0s; }
+
+/* ######################### END ACITVE LINK EFFECT ######################### */
+.year {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  animation-name: fadeInLeft;
+  animation-duration: 1s;
+  animation-delay: 3s;
+  opacity: 0;
+  animation-fill-mode: forwards; }
+  .year h6 {
+    font-family: "Charm"; }
+
+/* ################## animation ################## */
+.social-content:after {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background: #000;
+  position: absolute;
+  animation: rev-block 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  animation-delay: 1.4s; }
+
+@keyframes rev-block {
+  0% {
+    left: 0%;
+    width: 0; }
+  50% {
+    left: 0%;
+    width: 100%; }
+  100% {
+    left: 100%;
+    width: 0%; } }
+
+@keyframes appear-text {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+@keyframes appear-relay {
+  0% {
+    background: rgba(255, 255, 255, 0.1); }
+  100% {
+    background: rgba(0, 0, 0, 0.2); } }
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0); }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+
+/* ######################### END HERO ######################### */
