--- a/css/styles.css
+++ b/css/styles.css
@@ -47,23 +47,45 @@ h6 {
   top: 0;
   width: 100%;
   height: 60px;
-  background: #000;
+  background: rgba(0, 0, 0, 0.85);
   display: flex;
   align-items: center;
   z-index: 1;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); }
 
+.navbar-content-effect {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  align-items: center; }
+
 .navbar-center {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 0 2em; }
+  padding: 0 1em;
+  opacity: 0;
+  animation-name: fadeInDown;
+  animation-fill-mode: forwards;
+  animation-duration: .8s;
+  animation-delay: 4s;
+  position: absolute;
+  z-index: 5; }
+  .navbar-center h6 {
+    color: #404040; }
   .navbar-center .navbar-list {
     display: flex;
     justify-content: flex-end; }
+    .navbar-center .navbar-list li {
+      margin-left: 1.3rem; }
     .navbar-center .navbar-list__link {
       color: #fff;
-      padding: 0 0 0 1em; }
+      font-size: 14px; }
+    .navbar-center .navbar-list__link:hover {
+      text-decoration: line-through;
+      text-decoration-color: black; }
 
 /* ######################### END NAVBAR ######################### */
 /* ######################### HERO ######################### */
@@ -100,6 +122,19 @@ h6 {
     color: #4d4d4d;
     font-family: "Charm"; }
 
+.banner-content__title {
+  opacity: 0;
+  animation: appear-text 0.0001s linear forwards;
+  animation-delay: 2s;
+  letter-spacing: 5px; }
+
+.banner-content__email {
+  opacity: 0;
+  animation: appear-text 0.0001s linear forwards;
+  animation-delay: 2s;
+  padding-left: 20px; }
+
+/* ######################### social-content ######################### */
 .social-content {
   width: auto;
   padding: 20px;
@@ -110,16 +145,6 @@ h6 {
   animation-delay: 3s;
   animation-timing-function: linear;
   overflow: hidden; }
-
-.banner-content__title {
-  opacity: 0;
-  animation: appear-text 0.0001s linear forwards;
-  animation-delay: 2s; }
-
-.banner-content__email {
-  opacity: 0;
-  animation: appear-text 0.0001s linear forwards;
-  animation-delay: 2s; }
 
 .banner-content-list {
   list-style: none;
@@ -150,6 +175,21 @@ h6 {
     color: #fff;
     background: black; }
 
+/* ######################### end social-content ######################### */
+.year {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  animation-name: fadeInLeft;
+  animation-duration: 1s;
+  animation-delay: 4s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  border-left: 1px solid #333;
+  padding: 0 10px; }
+  .year h6 {
+    font-family: "Charm"; }
+
 /* ######################### ACITVE LINK EFFECT ######################### */
 .banner-content-list__link:after {
   content: "";
@@ -173,18 +213,6 @@ h6 {
   transition: 0s; }
 
 /* ######################### END ACITVE LINK EFFECT ######################### */
-.year {
-  position: absolute;
-  bottom: 10px;
-  right: 20px;
-  animation-name: fadeInLeft;
-  animation-duration: 1s;
-  animation-delay: 4s;
-  opacity: 0;
-  animation-fill-mode: forwards; }
-  .year h6 {
-    font-family: "Charm"; }
-
 /* ################## animation ################## */
 .social-content:after {
   content: "";
@@ -208,6 +236,17 @@ h6 {
   animation: rev-block 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
   animation-delay: 1.4s; }
 
+.navbar-content-effect:after {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background: #000;
+  position: absolute;
+  animation: rev-block-nav 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  animation-delay: 3.2s; }
+
 @keyframes rev-block {
   0% {
     left: 0%;
@@ -218,6 +257,14 @@ h6 {
   100% {
     left: 100%;
     width: 0%; } }
+
+@keyframes rev-block-nav {
+  0% {
+    height: 0; }
+  50% {
+    height: 100%; }
+  100% {
+    height: 100%; } }
 
 @keyframes appear-text {
   0% {
@@ -239,4 +286,13 @@ h6 {
     opacity: 1;
     transform: translate3d(0, 0, 0); } }
 
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0); }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0); } }
+
+/* ################## end animation ################## */
 /* ######################### END HERO ######################### */
