--- a/css/styles.css
+++ b/css/styles.css
@@ -324,8 +324,10 @@ h6 {
 .skills-title {
   width: 90vw; }
   .skills-title h2 {
-    padding: 2rem 0 10px 0; }
+    padding: 2rem 0 10px 0;
+    letter-spacing: 5px; }
 
+/* ######################### skills-list-icons ######################### */
 .skills-center {
   width: 90vw;
   padding: 2rem 0; }
@@ -334,7 +336,12 @@ h6 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-gap: 1rem;
-    text-align: center; }
+    text-align: center;
+    /* ########## intro-appear-skills-list effect ############## */
+    transform: translateY(20px);
+    transition: 0.5s all ease-in-out;
+    opacity: 0;
+    /* ########## end intro-appear-skills-list effect ############## */ }
     .skills-center .skills-list li {
       width: 100px;
       margin: auto;
@@ -358,7 +365,21 @@ h6 {
         letter-spacing: 1px;
         opacity: 0;
         transition: 0.2s; }
+  .skills-center .skills-appear {
+    opacity: 1;
+    transform: translateY(0px); }
 
+/* ########## intro-appear-skills-list effect ############## */
+/* ######### end intro-appear-skills-list effect ############### */
+/* ######################### end skills-list-icons ######################### */
+/* ######################### workflow-list ######################### */
+.workflow-list {
+  width: 90vw;
+  padding: 2rem 0; }
+  .workflow-list li {
+    line-height: 2rem; }
+
+/* ######################### end workflow-list ######################### */
 /* ######################### color-icons:hover ######################### */
 .fa-html5:hover {
   color: #DE4A24; }
@@ -388,12 +409,6 @@ h6 {
   color: white; }
 
 /* ######################### end color icons:hover ######################### */
-.workflow-list {
-  width: 90vw;
-  padding: 2rem 0; }
-  .workflow-list li {
-    line-height: 2rem; }
-
 /* ######################### END SKILLS ######################### */
 /* ######################### PORTFOLIO ######################### */
 .projects {
@@ -407,7 +422,8 @@ h6 {
 .projects-title {
   width: 90vw; }
   .projects-title h2 {
-    padding: 2rem 0; }
+    padding: 2rem 0;
+    letter-spacing: 5px; }
 
 .projects-center {
   width: 90vw;
@@ -417,6 +433,7 @@ h6 {
   grid-row-gap: 2rem;
   padding-bottom: 4rem; }
 
+/* ######################### project-card ######################### */
 .project {
   background: rgba(0, 0, 0, 0.7);
   border-radius: 2px;
@@ -444,7 +461,8 @@ h6 {
     border: 1px solid #00ff00; }
 
 .project-img-container {
-  position: relative; }
+  position: relative;
+  overflow: hidden; }
 
 .project-img-container:hover .project-img-overlay {
   opacity: 1; }
@@ -463,7 +481,10 @@ h6 {
   opacity: 0;
   color: white;
   font-size: 20px;
-  padding: 100px;
+  padding: 110px;
   text-align: center; }
 
-/* ######################### PORTFOLIO ######################### */
+/* ######################### end project-card ######################### */
+/* ######################### END PORTFOLIO ######################### */
+/* ######################### FOOTER ######################### */
+/* ######################### FOOTER ######################### */
