--- a/css/styles.css
+++ b/css/styles.css
@@ -77,22 +77,96 @@ h6 {
   @media screen and (min-width: 1000px) {
     .navbar-center {
       padding: 0 2em; } }
-  .navbar-center a {
+  .navbar-center .navbar-hamburguer {
+    position: relative;
+    cursor: pointer;
+    padding: 10px; }
+  .navbar-center .navbar-hamburguer__logo {
     color: #595959;
-    font-size: 16px; }
+    font-size: 22px;
+    padding-left: 25px; }
+  .navbar-center .navbar-hamburguer__logo:before {
+    content: "";
+    position: absolute;
+    width: 23px;
+    height: 2px;
+    top: 15.5px;
+    left: 5px;
+    background: white;
+    color: white;
+    box-shadow: 0 7px, 0 14px; }
   .navbar-center .navbar-list {
     display: flex;
     justify-content: flex-end; }
     .navbar-center .navbar-list li {
-      margin-left: 1rem; }
+      margin-left: 1rem;
+      position: relative; }
+    .navbar-center .navbar-list li:after {
+      content: "";
+      width: 0;
+      height: 2px;
+      top: 11px;
+      left: 0;
+      position: absolute;
+      transition: .3s;
+      background: #ffffff; }
+    .navbar-center .navbar-list li:hover:after {
+      width: 100%; }
     .navbar-center .navbar-list__link {
-      color: #fff;
-      font-size: 14px; }
-    .navbar-center .navbar-list__link:hover {
-      text-decoration: line-through;
-      text-decoration-color: black; }
+      color: #ffffff;
+      font-size: 11px; }
+      @media screen and (min-width: 380px) {
+        .navbar-center .navbar-list__link {
+          font-size: 14px; } }
 
 /* ######################### END NAVBAR ######################### */
+/* ######################### SIDE-BAR ######################### */
+.side-bar {
+  background: #ffffff;
+  bottom: 0;
+  font-size: 14px;
+  overflow-y: auto;
+  padding: 72px 0 40px;
+  position: fixed;
+  top: 60px;
+  transform: translateX(-100%);
+  transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  width: 280px;
+  z-index: 1; }
+  .side-bar ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .side-bar ul li {
+      position: relative;
+      display: block;
+      width: 100%;
+      text-align: center;
+      padding: 10px 0;
+      overflow: hidden;
+      color: black;
+      font-weight: bold; }
+      .side-bar ul li a  {
+        position: relative; }
+      .side-bar ul li a:hover {
+        cursor: pointer; }
+    .side-bar ul li:hover {
+      background: rgba(0, 0, 0, 0.05); }
+
+.appear-sidebar {
+  transform: translateX(0%);
+  z-index: 5; }
+
+.appear-sidebar:after {
+  content: "";
+  top: 100%;
+  right: 100%;
+  z-index: 1;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.9); }
+
+/* ######################### END SIDE-BAR ######################### */
 /* ######################### HERO ######################### */
 .hero {
   min-height: calc(100vh - 60px);
@@ -113,7 +187,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #fff; }
+  color: #ffffff; }
 
 .banner-effect {
   width: 100%; }
@@ -186,7 +260,7 @@ h6 {
       transition: .3s; }
   .banner-content-list li:hover a {
     transform: scale(0.95);
-    color: #fff;
+    color: #ffffff;
     background: black; }
 
 /* ######################### end social-content ######################### */
@@ -224,6 +298,27 @@ h6 {
 .banner-content-list__link:active:after {
   transform: scale(0, 0);
   opacity: .3;
+  transition: 0s; }
+
+.side-bar__link:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(circle, #000 7%, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  transform: scale(12, 12);
+  opacity: 0;
+  transition: transform .3s, opacity 1s; }
+
+.side-bar__link:active:after {
+  transform: scale(0, 0);
+  opacity: .1;
   transition: 0s; }
 
 /* ######################### END ACITVE LINK EFFECT ######################### */
@@ -325,7 +420,8 @@ h6 {
   width: 90vw; }
   .skills-title h2 {
     padding: 2rem 0 10px 0;
-    letter-spacing: 5px; }
+    letter-spacing: 5px;
+    color: #999999; }
 
 /* ######################### skills-list-icons ######################### */
 .skills-center {
@@ -339,7 +435,7 @@ h6 {
     text-align: center;
     /* ########## intro-appear-skills-list effect ############## */
     transform: translateY(20px);
-    transition: 0.5s all ease-in-out;
+    transition: 0.4s all ease-in-out;
     opacity: 0;
     /* ########## end intro-appear-skills-list effect ############## */ }
     .skills-center .skills-list li {
@@ -377,7 +473,19 @@ h6 {
   width: 90vw;
   padding: 2rem 0; }
   .workflow-list li {
-    line-height: 2rem; }
+    line-height: 2rem;
+    position: relative;
+    padding-left: 20px; }
+  .workflow-list li:after {
+    content: "";
+    width: 3.5px;
+    height: 9px;
+    position: absolute;
+    border-right: 3px solid #333;
+    border-bottom: 3px solid #333;
+    top: 10px;
+    left: 6px;
+    transform: rotate(35deg); }
 
 /* ######################### end workflow-list ######################### */
 /* ######################### color-icons:hover ######################### */
@@ -417,13 +525,17 @@ h6 {
   justify-content: center;
   align-items: center;
   color: #666666;
-  background: #04080b; }
+  background: linear-gradient(0deg, #071d3c 0%, #030d18 30%); }
+  .projects .projects-appear {
+    opacity: 1;
+    transform: translateY(0px); }
 
 .projects-title {
   width: 90vw; }
   .projects-title h2 {
     padding: 2rem 0;
-    letter-spacing: 5px; }
+    letter-spacing: 5px;
+    color: #999999; }
 
 .projects-center {
   width: 90vw;
@@ -431,30 +543,33 @@ h6 {
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-column-gap: 1.5rem;
   grid-row-gap: 2rem;
-  padding-bottom: 4rem; }
+  padding-bottom: 4rem;
+  transform: translateY(20px);
+  transition: 0.4s all ease-in-out;
+  opacity: 0; }
 
 /* ######################### project-card ######################### */
 .project {
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.6);
   border-radius: 2px;
   position: relative; }
   .project h4 {
     padding: 1rem 2rem;
-    color: #fff; }
+    color: #ffffff; }
   .project ul {
     padding-bottom: 1rem; }
   .project ul li {
     padding: 0 3rem;
     line-height: 1.4rem;
     font-size: 14px;
-    color: #fff;
+    color: #ffffff;
     position: relative; }
   .project ul li:after {
     content: "";
     position: absolute;
     width: 5px;
     height: 5px;
-    background: black;
+    background: transparent;
     left: 33px;
     top: calc(50% - 2.5px);
     transform: rotate(50deg);
@@ -487,4 +602,10 @@ h6 {
 /* ######################### end project-card ######################### */
 /* ######################### END PORTFOLIO ######################### */
 /* ######################### FOOTER ######################### */
+.footer {
+  background: black; }
+
+.footer-social {
+  width: 90vw; }
+
 /* ######################### FOOTER ######################### */
