--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ h5 {
   font-size: 14px; }
 
 h6 {
-  font-size: 10px; }
+  font-size: 11px; }
 
 /* ######################### END BASE ######################### */
 /* ######################### NAVBAR ######################### */
@@ -85,6 +85,9 @@ h6 {
     color: #595959;
     font-size: 22px;
     padding-left: 25px; }
+    @media screen and (max-width: 320px) {
+      .navbar-center .navbar-hamburguer__logo {
+        font-size: 16px; } }
   .navbar-center .navbar-hamburguer__logo:before {
     content: "";
     position: absolute;
@@ -95,6 +98,36 @@ h6 {
     background: white;
     color: white;
     box-shadow: 0 7px, 0 14px; }
+    @media screen and (max-width: 320px) {
+      .navbar-center .navbar-hamburguer__logo:before {
+        top: 12.8px; } }
+  .navbar-center .buttonHome-box {
+    display: none; }
+    @media screen and (min-width: 500px) {
+      .navbar-center .buttonHome-box {
+        display: block; }
+        .navbar-center .buttonHome-box .buttonHome {
+          width: 20px;
+          height: 20px;
+          background: transparent;
+          border-left: 2px solid white;
+          border-top: 2px solid white;
+          border-radius: 1px;
+          transform: translateY(20px);
+          transition: 0.3s ease-in-out;
+          opacity: 0; }
+          .navbar-center .buttonHome-box .buttonHome .buttonHome-shadow {
+            width: 13px;
+            height: 13px;
+            margin: 3px;
+            background: transparent;
+            border-left: 2px solid white;
+            border-top: 2px solid white;
+            border-radius: 1px; }
+        .navbar-center .buttonHome-box .buttonHome-effect {
+          opacity: 1;
+          transform: translateY(0px);
+          transform: rotate(45deg); } }
   .navbar-center .navbar-list {
     display: flex;
     justify-content: flex-end; }
@@ -114,7 +147,8 @@ h6 {
       width: 100%; }
     .navbar-center .navbar-list__link {
       color: #ffffff;
-      font-size: 11px; }
+      font-size: 11px;
+      padding: 20px 0; }
       @media screen and (min-width: 380px) {
         .navbar-center .navbar-list__link {
           font-size: 14px; } }
@@ -122,7 +156,7 @@ h6 {
 /* ######################### END NAVBAR ######################### */
 /* ######################### SIDE-BAR ######################### */
 .side-bar {
-  background: #ffffff;
+  background: linear-gradient(0deg, white 75%, #0f0f0f 75%);
   bottom: 0;
   font-size: 14px;
   overflow-y: auto;
@@ -133,6 +167,13 @@ h6 {
   transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
   width: 280px;
   z-index: 1; }
+  .side-bar .side-img-box {
+    width: 150px;
+    margin: 0 auto;
+    padding: 10px 0; }
+    .side-bar .side-img-box .side-img-contact {
+      border-radius: 50%;
+      border: 3px solid #ffffff; }
   .side-bar ul {
     display: flex;
     justify-content: center;
@@ -603,9 +644,66 @@ h6 {
 /* ######################### END PORTFOLIO ######################### */
 /* ######################### FOOTER ######################### */
 .footer {
-  background: black; }
+  width: 100%;
+  background: black;
+  color: gray; }
+  .footer h5, .footer h6 {
+    text-align: center;
+    padding: 2rem 0; }
+  .footer p {
+    font-size: 10px;
+    text-align: center;
+    line-height: 20px; }
 
 .footer-social {
-  width: 90vw; }
+  width: 90vw;
+  margin: 0 auto; }
+
+.footer-social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding-bottom: 20px; }
+  .footer-social-list li {
+    line-height: 3em;
+    width: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .footer-social-list li a {
+      font-size: 1.2rem;
+      color: #cccccc;
+      width: 100%;
+      background: transparent;
+      text-align: center; }
+    .footer-social-list li a:hover {
+      color: #ffffff; }
+
+.footer-description {
+  padding-bottom: 2rem; }
+  .footer-description .footer-description-box {
+    text-align: center;
+    padding: 12.6px 0; }
+    .footer-description .footer-description-box .footer-description-box__button {
+      margin: 0 10px;
+      padding: 10px 20px;
+      color: #cccccc;
+      box-sizing: border-box;
+      border-radius: 2px;
+      transition: .25s; }
+    .footer-description .footer-description-box a:nth-child(1) {
+      border: 1.3px solid #ffffff; }
+    .footer-description .footer-description-box a:nth-child(1):hover {
+      background: #ffffff;
+      color: black; }
+    .footer-description .footer-description-box a:nth-child(2) {
+      background: rgba(255, 255, 255, 0.2);
+      border: 1.3px solid #333;
+      color: white; }
+    .footer-description .footer-description-box a:nth-child(2):hover {
+      background: rgba(255, 255, 255, 0.1);
+      border: 1.3px solid #1A1A1A; }
 
 /* ######################### FOOTER ######################### */
