--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ h6 {
   transform: translateX(-100%);
   transition: transform 0.15s cubic-bezier(0.4, 0, 0.2, 1);
   width: 280px;
-  z-index: 1; }
+  z-index: 99; }
   .side-bar .side-img-box {
     width: 150px;
     margin: 0 auto;
@@ -174,12 +174,12 @@ h6 {
     .side-bar .side-img-box .side-img-contact {
       border-radius: 50%;
       border: 3px solid #ffffff; }
-  .side-bar ul {
+  .side-bar .side-bar__menu {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column; }
-    .side-bar ul li {
+    .side-bar .side-bar__menu .side-bar__item {
       position: relative;
       display: block;
       width: 100%;
@@ -188,21 +188,56 @@ h6 {
       overflow: hidden;
       color: black;
       font-weight: bold; }
-      .side-bar ul li a  {
-        position: relative; }
-      .side-bar ul li a:hover {
+      .side-bar .side-bar__menu .side-bar__item .side-bar__link  {
+        position: relative;
+        display: block; }
+      .side-bar .side-bar__menu .side-bar__item .side-bar__link:hover {
         cursor: pointer; }
-    .side-bar ul li:hover {
+    .side-bar .side-bar__menu .side-bar__item:hover {
       background: rgba(0, 0, 0, 0.05); }
+    .side-bar .side-bar__menu .sider-bar__submenu {
+      width: 100%;
+      transition: 1s; }
+      .side-bar .side-bar__menu .sider-bar__submenu .sider-bar_submenu-list {
+        position: absolute;
+        transition: 1s;
+        padding-top: 20px;
+        padding-left: 55px;
+        width: 60%;
+        margin: auto;
+        text-align: left; }
+        .side-bar .side-bar__menu .sider-bar__submenu .sider-bar_submenu-list li {
+          display: block;
+          position: relative; }
+          .side-bar .side-bar__menu .sider-bar__submenu .sider-bar_submenu-list li a {
+            display: block;
+            line-height: 30px; }
+        .side-bar .side-bar__menu .sider-bar__submenu .sider-bar_submenu-list li:after {
+          content: "";
+          position: absolute;
+          width: 5px;
+          height: 5px;
+          background: transparent;
+          left: -12px;
+          top: 12px;
+          background: #00e600;
+          border-radius: 50%;
+          border: 1px solid #333; }
+        .side-bar .side-bar__menu .sider-bar__submenu .sider-bar_submenu-list li:last-child:after {
+          background: #ff9900;
+          border: 1px solid #333; }
+      .side-bar .side-bar__menu .sider-bar__submenu .sider-bar__submenu-effect {
+        position: relative;
+        transform: translateY(0px); }
 
 .appear-sidebar {
   transform: translateX(0%);
-  z-index: 5; }
+  z-index: 99; }
 
 .appear-sidebar:after {
   content: "";
-  top: 100%;
-  right: 100%;
+  button: 0;
+  right: 0;
   z-index: 1;
   position: absolute;
   background: rgba(0, 0, 0, 0.9); }
@@ -258,7 +293,8 @@ h6 {
   opacity: 0;
   animation: appear-text 0.0001s linear forwards;
   animation-delay: 2s;
-  padding-left: 10px; }
+  padding-left: 10px;
+  padding: 20px 0; }
   @media screen and (min-width: 1000px) {
     .banner-content__email {
       font-size: 34px; } }
@@ -295,7 +331,7 @@ h6 {
       font-size: 1rem;
       color: #cccccc;
       width: 100%;
-      background: #1a1a1a;
+      background: #262626;
       text-align: center;
       border-radius: 50%;
       transition: .3s; }
@@ -619,9 +655,26 @@ h6 {
 .project-img-container {
   position: relative;
   overflow: hidden; }
+  .project-img-container .img-bang {
+    position: absolute;
+    bottom: 30px;
+    right: 20px;
+    z-index: 99;
+    opacity: 0;
+    transform: translateY(200%);
+    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1); }
+    .project-img-container .img-bang h6 {
+      color: #e6e6e6;
+      padding: 5px 10px;
+      background: #1a1a1a;
+      border-radius: 2px; }
 
 .project-img-container:hover .project-img-overlay {
   opacity: 1; }
+
+.project-img-container:hover .img-bang {
+  opacity: 1;
+  transform: translateY(0%); }
 
 .project-img {
   position: relative; }
@@ -694,16 +747,18 @@ h6 {
       border-radius: 2px;
       transition: .25s; }
     .footer-description .footer-description-box a:nth-child(1) {
-      border: 1.3px solid #ffffff; }
+      border: 1px solid #ffffff; }
     .footer-description .footer-description-box a:nth-child(1):hover {
       background: #ffffff;
       color: black; }
     .footer-description .footer-description-box a:nth-child(2) {
       background: rgba(255, 255, 255, 0.2);
       border: 1.3px solid #333;
-      color: white; }
+      color: #ffffff;
+      text-transform: uppercase;
+      letter-spacing: 1px; }
     .footer-description .footer-description-box a:nth-child(2):hover {
       background: rgba(255, 255, 255, 0.1);
-      border: 1.3px solid #1A1A1A; }
+      border: 1.1px solid #333; }
 
 /* ######################### FOOTER ######################### */
