--- a/css/styles.css
+++ b/css/styles.css
@@ -159,11 +159,11 @@ h6 {
 /* ######################### END NAVBAR ######################### */
 /* ######################### SIDE-BAR ######################### */
 .side-bar {
-  background: linear-gradient(0deg, white 75%, #0f0f0f 75%);
+  background: #ffffff;
   bottom: 0;
   font-size: 14px;
   overflow-y: auto;
-  padding: 72px 0 40px;
+  padding: 0px 0 40px;
   position: fixed;
   top: 0px;
   transform: translateX(-100%);
@@ -175,12 +175,15 @@ h6 {
       transform: translateX(0%);
       opacity: 1; } }
   .side-bar .side-img-box {
-    width: 150px;
+    width: 100%;
     margin: 0 auto;
-    padding: 10px 0; }
+    padding: 72px 0 30px 0;
+    background: linear-gradient(0deg, white 42%, #282828 42%);
+    text-align: center; }
     .side-bar .side-img-box .side-img-contact {
-      border-radius: 50%;
-      border: 3px solid #ffffff; }
+      border-radius: 70%;
+      border: 3px solid #ffffff;
+      width: 50%; }
   .side-bar .side-bar__menu {
     display: flex;
     justify-content: center;
@@ -195,23 +198,26 @@ h6 {
       overflow: hidden;
       color: black;
       letter-spacing: 1px;
-      font-weight: bold; }
+      font-weight: bold;
+      border-top: 1px solid transparent;
+      border-bottom: 1px solid transparent;
+      transition: 0.2s; }
       .side-bar .side-bar__menu .side-bar__item .side-bar__link  {
         position: relative;
         display: block; }
       .side-bar .side-bar__menu .side-bar__item .side-bar__link:hover {
         cursor: pointer; }
     .side-bar .side-bar__menu .side-bar__item:hover {
-      background: rgba(0, 0, 0, 0.05); }
+      background: rgba(0, 0, 0, 0.05);
+      border-color: #e6e6e6; }
     .side-bar .side-bar__menu .sider-bar__submenu {
       width: 100%;
-      transition: 1s;
       overflow: hidden; }
       .side-bar .side-bar__menu .sider-bar__submenu .sider-bar_submenu-list {
         position: absolute;
         transition: 1s;
         padding-top: 20px;
-        padding-left: 63px;
+        padding-left: 13px;
         width: 70%;
         height: auto;
         margin: auto;
@@ -239,13 +245,11 @@ h6 {
       .side-bar .side-bar__menu .sider-bar__submenu .sider-bar__submenu-effect {
         position: relative; }
     .side-bar .side-bar__menu .sider-bar__submenu2 {
-      width: 100%;
-      transition: 1s; }
+      width: 100%; }
       .side-bar .side-bar__menu .sider-bar__submenu2 .sider-bar_submenu-list2 {
         position: absolute;
-        transition: 1s;
         padding-top: 20px;
-        padding-left: 63px;
+        padding-left: 13px;
         width: 70%;
         margin: auto;
         text-align: left; }
@@ -269,35 +273,26 @@ h6 {
       .side-bar .side-bar__menu .sider-bar__submenu2 .sider-bar__submenu-effect2 {
         position: relative;
         transform: translateY(0px); }
-  .side-bar .education-box {
-    width: 80%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    margin: 30px auto;
-    grid-gap: 6px;
-    border: 1px solid #d9d9d9;
-    box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.15);
-    border-radius: 2px;
-    transform: translateY(70px);
-    animation: 0.25s cubic-bezier(0.4, 0, 0.2, 1) forwards;
-    opacity: 0; }
-    .side-bar .education-box .education-box__item {
-      display: grid;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      width: 100%;
-      height: 100%; }
-      .side-bar .education-box .education-box__item img {
-        width: 100%;
-        height: 100%;
-        border-radius: 15%; }
-      .side-bar .education-box .education-box__item .fa-youtube {
-        font-size: 2.5rem;
-        color: red; }
+    .side-bar .side-bar__menu .sider-bar__submenu3 {
+      width: 100%; }
+      .side-bar .side-bar__menu .sider-bar__submenu3 .sider-bar_submenu-list3 {
+        position: absolute;
+        transition: 1s;
+        padding-top: 20px;
+        padding-left: 0px;
+        width: 70%;
+        margin: auto;
+        text-align: left; }
+        .side-bar .side-bar__menu .sider-bar__submenu3 .sider-bar_submenu-list3 li {
+          display: block;
+          position: relative; }
+          .side-bar .side-bar__menu .sider-bar__submenu3 .sider-bar_submenu-list3 li a {
+            display: inline-block;
+            line-height: 30px;
+            padding-left: 5px; }
+      .side-bar .side-bar__menu .sider-bar__submenu3 .sider-bar__submenu-effect3 {
+        position: relative;
+        transform: translateY(0px); }
   .side-bar .appear-education-box {
     animation-name: fadeInUp; }
 
@@ -338,7 +333,9 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #ffffff; }
+  color: #ffffff;
+  top: 0;
+  left: 0; }
 
 .banner-effect {
   width: 100%; }
@@ -350,7 +347,7 @@ h6 {
   background: rgba(0, 0, 0, 0.3);
   position: relative;
   padding: 0 1rem; }
-  @media screen and (min-width: 1000px) {
+  @media screen and (min-width: 760px) {
     .banner-content {
       padding: 0 3rem; } }
   .banner-content__email {
@@ -362,7 +359,7 @@ h6 {
   animation: appear-text 0.0001s linear forwards;
   animation-delay: 1.1s;
   letter-spacing: 5px; }
-  @media screen and (min-width: 1000px) {
+  @media screen and (min-width: 760px) {
     .banner-content__title {
       font-size: 96px; } }
 
@@ -371,7 +368,7 @@ h6 {
   animation: appear-text 0.0001s linear forwards;
   animation-delay: 1.1s;
   padding-left: 10px; }
-  @media screen and (min-width: 1000px) {
+  @media screen and (min-width: 760px) {
     .banner-content__email {
       font-size: 34px; } }
 
@@ -419,8 +416,8 @@ h6 {
 /* ######################### end social-content ######################### */
 .year {
   position: absolute;
-  bottom: 10px;
-  right: 20px;
+  bottom: 20px;
+  right: 10px;
   animation-name: fadeInLeft;
   animation-duration: 1.7s;
   animation-delay: 2s;
@@ -583,7 +580,7 @@ h6 {
   align-items: center;
   background: black;
   color: #666666; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1300px) {
     .skills-section {
       display: block;
       padding: 0 2rem; } }
@@ -609,7 +606,7 @@ h6 {
 .skills-center {
   width: 90vw;
   padding: 2rem 0; }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1300px) {
     .skills-center {
       width: 100%;
       padding: 30px 2rem; } }
@@ -787,6 +784,19 @@ h6 {
     transform: translateY(200%);
     transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1); }
     .project-img-container .img-bang h6 {
+      color: #e6e6e6;
+      padding: 5px 10px;
+      background: #1a1a1a;
+      border-radius: 2px; }
+  .project-img-container .img-see {
+    position: absolute;
+    bottom: 30px;
+    right: 20px;
+    z-index: 99;
+    opacity: 0;
+    transform: translateY(200%);
+    transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1); }
+    .project-img-container .img-see h6 {
       color: #e6e6e6;
       padding: 5px 10px;
       background: #1a1a1a;
